<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/navigation_drawer_header_height"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/navigation_drawer_header_padding"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_avatar"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/navigation_drawer_header_content_description"
            android:elevation="16dp"
            android:background="@drawable/avatar"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDisplayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_drawer_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textRanking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigation_drawer_header_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>